# boost_corr

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml  pre-commit.yml  publish.yml  tests.yml
benchmark/: benchmark_apsu.sh  benchmark_waxpcs.sh  compare_result.py  test_performance.py
boost_corr/: __init__.py  cli.py  gpu_scheduler.py  help_functions.py  multitau.py  twotime.py  twotime_stream.py
boost_corr/layer_model/: help_functions.py  layer_model.py  layer_model_numpy.py  main_script.py  rigaku_handler.py  test_speed.py
boost_corr/xpcs-aps-8idi/: Append_Metadata_xpcs_multitau.py  benchmark_apsu.sh  example_cmd_line.sh  example_tanzanite.sh  gpu_corr_cmd.py  gpu_corr_multitau.py  gpu_corr_server.py  gpu_corr_solver.py  gpu_corr_twotime.py  hdf_handler.py  imm_handler.py  rigaku_handler.py  xpcs_dataset.py  xpcs_qpartitionmap.py  xpcs_result.py
boost_corr/xpcs-aps-8idi/gui/: gpu_corr_server_gui.py
boost_corr/xpcs_als_12.0.2/: example_als.py
boost_corr/xpcs_aps_8idi/: Append_Metadata_xpcs_multitau.py  append_metadata_qmap.py  aps_8idi.py  benchmark_waxpcs.sh  compare_results.py  gpu_corr_multitau.py  gpu_corr_twotime.py  gpu_record.py  hdf_handler.py  hdf_reader.py  nexus_xpcs_result_schema.py  pva_handler.py  rigaku_3M_handler.py  rigaku_handler.py  test_twotime.sh  xpcs_dataset.py  xpcs_qpartitionmap.py  xpcs_result.py
boost_corr/xpcs_aps_8idi/dataset/: hdf_handler.py  help_functions.py  rigaku_3M_handler.py  rigaku_handler.py  test_rigaku_3M.py  timepix4_handler.py  utils.py  xpcs_dataset.py
boost_corr/xpcs_aps_8idi/service/: gpu_corr_solver.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/: example_aps8idi_config.json  example_twotime.sh  multitau_tanzanite.sh  twotime_tanzanite.sh
src/boost_corr/: __init__.py  _version.py  cli.py  gpu_scheduler.py  help_functions.py  multitau.py  twotime.py
src/boost_corr/gpu/: __init__.py  gpu_corr_multitau.py  gpu_corr_twotime.py  gpu_record.py
src/boost_corr/gui/: gpu_corr_gui.py  gpu_corr_server_gui.py
src/boost_corr/loader/: aps_8idi.py  hdf_handler.py  hdf_reader.py  rigaku_3M_handler.py  rigaku_handler.py  xpcs_dataset.py  xpcs_qpartitionmap.py  xpcs_result.py
src/boost_corr/loader/dataset/: hdf_handler.py  imm_handler.py  rigaku_3M_handler.py  rigaku_handler.py  test_rigaku_3M.py
src/boost_corr/loader/service/: gpu_corr_client.py  gpu_corr_server.py  gpu_corr_solver.py
src/boost_corr/solvers/: multitau.py  twotime.py
src/boost_corr/tests/: __init__.py
src/boost_corr/utils/: help_functions.py
src/boost_corr/xpcs_aps_8idi/: Append_Metadata_xpcs_multitau.py  __init__.py  append_metadata_qmap.py  aps_8idi.py  exceptions.py  gpu_corr.py  gpu_corr_multitau.py  gpu_corr_twotime.py  hdf_reader.py  imm_handler.py  xpcs_qpartitionmap.py  xpcs_result.py
src/boost_corr/xpcs_aps_8idi/dataset/: __init__.py  hdf_handler.py  help_functions.py  imm_handler.py  rigaku_3M_handler.py  rigaku_handler.py  test_rigaku_3M.py  timepix4_handler.py  utils.py  xpcs_dataset.py
src/boost_corr/xpcs_aps_8idi/gui/: gpu_corr_gui.py  gpu_corr_server_gui.py
src/boost_corr/xpcs_aps_8idi/nexus/: nexus_utils.py  nexus_xpcs_result_schema.py
src/boost_corr/xpcs_aps_8idi/service/: gpu_corr_client.py  gpu_corr_server.py  gpu_corr_solver.py
src/boost_service/: gpu_corr_server.py  gpu_corr_solver.py
tests/: compare_result.py  test_boost_corr.py  test_boost_corr_multitau.py  test_boost_corr_twotime.py  test_functions.py  test_help_functions.py  test_performance.py  test_twotime.sh  test_xpcs_result.py
user-guide/: boost-corr-user-guide.rst
