[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "boost-corr"
dynamic = ["version"]
description = "A high-performance correlation (multi-tau/two-time) package running on GPU and CPU"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Miaoqi Chu", email = "mqichu@anl.gov"}
]
keywords = ["boost_corr", "correlation", "multi-tau", "two-time", "GPU", "XPCS"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "h5py",
    "hdf5plugin",
    "matplotlib",
    "numpy",
    "psutil",
    "scikit-image",
    "tqdm",
    "nvidia-ml-py",
    "torch",
    "torchvision",
]

[project.urls]
Homepage = "https://github.com/AdvancedPhotonSource/boost_corr"
Repository = "https://github.com/AdvancedPhotonSource/boost_corr"

[project.scripts]
boost_corr = "boost_corr.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
